# cspractice

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  dump.rdb  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 262fda290a37_m13_llp_module.py  2688c17513df_m11_practice_masters.py  4dd1680921de_m6_document_templates_and_library.py  8be66146b918_phase_1_schema.py  9ed858c5e94d_m10_meetings.py  a1f2c3d4e5b6_m18_dsc_reminder_dispatch.py  e0efaa72d48a_m9_statutory_registers_phase_2_rule_.py
backend/app/: audit.py  config.py  db.py  main.py
backend/app/models/: __init__.py  activity.py  base.py  calendar.py  documents.py  llps.py  masters.py  meetings.py  practice.py  registers.py  rules.py  tenancy.py
backend/app/repositories/: activity.py  calendar.py  companies.py  masters.py  rules.py
backend/app/routes/: activity.py  auth.py  calendar.py  companies.py  directors.py  documents.py  firm.py  health.py  imports.py  llps.py  meetings.py  practice.py  registers.py  reminders.py  shareholders.py  taxonomies.py  team.py
backend/app/rules/: check.py  dates.py  evaluator.py  load.py  loader.py  predicates.py
backend/app/schemas/: calendar.py  companies.py  masters.py
backend/app/security/: auth.py  crypto.py  csrf.py  headers.py  ratelimit.py
backend/app/services/: calendar.py  documents.py  email.py  imports.py  meetings.py  registers.py  reminders.py  worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flows.py  test_import.py  (+10 more)
(+81 files in other folders)
